20-final-devops-project/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finalproject
  labels: { app: task-api }
