20-final-devops-project/kubernetes/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
  namespace: finalproject
  labels: { app: task-api }
spec:
  type: ClusterIP
  selector: { app: task-api }
  ports: [{ port: 80, targetPort: http, name: http }]
